--- a/e-commerce-store/src/components/collection-item/collection-item.styles.scss
+++ b/e-commerce-store/src/components/collection-item/collection-item.styles.scss
@@ -1,5 +1,5 @@
 .collection-item {
-  width: 22%;
+  width: 22vw; // change from % to vw. % refers to container width, vw to window width.
   display: flex;
   flex-direction: column;
   height: 350px;
